# rmz

./: .cursorrules  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT_ROADMAP.md  Dockerfile  FEATURE_SUMMARY.md  PROGRESS.md  README.md  deny.toml  docker-compose.yml  package-lock.json  package.json  test_integration.txt  test_integrity.txt  test_integrity3.txt
.claude/: project-config.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  deploy.yml.template  deploy.yml.template.backup.1750292755461  release.yml  test.yml
docs/: ARCHITECTURE.md  ARCHITECTURE.md.backup.1750292755454  alias-guide.md  alias-setup.md  implementation-plan.md.backup.1750292755452  prd.md  prd.md.backup.1750292755451  rm-alias-setup.md  setup-guide.md  tech-stack.md  test-strategy.md
docs/adr/: template.md
docs/dev/: ARCHITECTURE.md  DEVELOPMENT_ROADMAP.md  PROGRESS.md  PROJECT_STRUCTURE.md  basic-development.md  development-roadmap.md  implementation-plan.md  prd.md  tech-stack.md  test-strategy.md
examples/: alias-examples.md
prompts/: README.md  basic-development-ja.md  enterprise-development.md
scripts/: README.md  install-aliases.sh  package-lock.json  package.json  setup-assistant.js  setup-assistant.ts  setup-rm-alias.sh  skeleton-generator.js  skeleton-generator.ts  test-in-docker.sh  test-rm-alias.sh
scripts/lib/: fileManager.ts  promptSelector.js  promptSelector.ts  templateProcessor.js  templateProcessor.ts  types.ts
src/: cli.rs  lib.rs  main.rs
src/commands/: completions.rs  config.rs  delete.rs  doctor.rs  example.rs  extract.rs  list.rs  log.rs  mod.rs  protect.rs  purge.rs  restore.rs  status.rs
src/core/: errors.rs  mod.rs
src/domain/: config.rs  file_meta.rs  mod.rs  operation_log.rs  trash_item.rs
src/infra/: config_manager.rs  fzf_interface.rs  meta_store.rs  mod.rs  operation_logger.rs  trash_store.rs
src/ops/: mod.rs  safe_file_ops.rs
src/utils/: duration_parser.rs  file_safety.rs  mod.rs  operation_recorder.rs  size_parser.rs
tests/: integration_tests.rs
